[tool.poetry]
name = "transformer-sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transformer_sandbox"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = {extras = ["sentencepiece"], version = "^4.27.3"}
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
jupyterlab = "^3.6.2"
sacremoses = "^0.0.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
